# glazier-tutorial

./: .travis.yml  README.md  glazier-tutorial.cabal  stack.yaml
app/Pipes/: ConsoleMain.hs
src/Glazier/Tutorial/: App.hs  Console.hs  Counter.hs  Field.hs  IO.hs  Message.hs  Random.hs  SignalModel.hs  Stopwatch.hs  StreamModel.hs
