name:                glazier-tutorial
version:             0.3.0.0
synopsis:            Console example of using the Glazier FRP framework with pipes-fluid for the signal network.
description:         Please see README.md
homepage:            https://github.com/louispan/glazier-tutorial#readme
license:             BSD3
license-file:        LICENSE
author:              Louis Pan
maintainer:          louis@pan.me
copyright:           2016 Louis Pan
category:            FRP, Pipes
build-type:          Simple
cabal-version:       >=1.10
tested-with:         GHC == 8.0.1, GHC == 8.0.2

library
  hs-source-dirs:      src
  exposed-modules:     Glazier.Tutorial.App
                     , Glazier.Tutorial.Counter
                     , Glazier.Tutorial.Console
                     , Glazier.Tutorial.Field
                     , Glazier.Tutorial.Random
                     , Glazier.Tutorial.StreamModel
  build-depends:       base >= 4.7 && < 5
                     , ansi-terminal >= 0.6 && < 1
                     , arithmoi >= 0.4 && < 1
                     , clock >= 0.7 && < 1
                     , constraints >= 0.4 && < 1
                     , containers >= 0.5 && < 1
                     , Decimal >= 0.4 && < 1
                     , deepseq >= 1.4 && < 2
                     , errors >= 2 && < 3
                     , extra >= 1.4 && < 2
                     , glazier >= 0.7 && < 1
                     , glazier-pipes >= 0.1.4 && < 1
                     , lens >= 4 && < 5
                     , lifted-async >= 0.9 && < 1
                     , mmorph >= 1 && < 2
                     , monad-control >= 1 && < 2
                     , MonadRandom >= 0.4 && < 1
                     , monoidal-containers >= 0.3.0.1 && < 1
                     , mtl >= 2 && < 3
                     , pipes >= 4 && < 5
                     , pipes-concurrency >= 2 && < 3
                     , pipes-fluid >= 0.3.1 && < 1
                     , pipes-misc >= 0.2.1.1 && < 1
                     , stm >= 2.4 && < 3
                     , stm-extras > 0.1 &&  < 1
                     , text >= 1 && < 2
                     , transformers >= 0.4 && < 0.6
  ghc-options:         -Wall
  default-language:    Haskell2010

executable glazier-tutorial-console-exe
  hs-source-dirs:      app/Pipes
  main-is:             ConsoleMain.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , Decimal >= 0.4 && < 1
                     , glazier-tutorial
                     , mtl >= 2 && < 3
                     , pipes-concurrency >= 2 && < 3
                     , transformers >= 0.4 && < 0.6
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/louispan/glazier-tutorial
